--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,14 +7,23 @@ on:
       - main
 
 jobs:
-  test-and-format:
-    name: Test and format Rust code
+  format-and-test:
+    name: Format and test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: hecrj/setup-rust-action@v1
         with:
           rust-version: stable
+      - run: cargo fmt -- --check
       - run: cargo test --verbose --workspace --all-features
       - run: cargo test --verbose --workspace --no-default-features
-      - run: cargo fmt -- --check
+  bench:
+    name: Benchmark
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: hecrj/setup-rust-action@v1
+        with:
+          rust-version: stable
+      - run: cargo bench
